Izmenjena struktura pocetne stranice

--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
 <body>
     <h1>Reaktivna paradigma - primeri</h1>
 
-    <h3>Tokovi od dogadjaja</h3>
+    <h3>Kreiranje tokova</h3>
     <a href="primeri/001.html">Primer 1</a>
     <a href="primeri/002.html">Primer 2</a>
-
-    <h3>Tokovi od nizova</h3>
     <a href="primeri/003.html">Primer 3</a>
     <a href="primeri/004.html">Primer 4</a>
-
-    <h3>Tokovi od "nule"</h3>
     <a href="primeri/005.html">Primer 5</a>
     <a href="primeri/006.html">Primer 6</a>
     <a href="primeri/007.html">Primer 7</a>
     <a href="primeri/008.html">Primer 8</a>
+
+    <h3>Transformisanje i filterovanje tokova</h3>
+
+    <h3>Kombinovanje tokova</h3>
+
+    <h3>Dodaci i rukovanje greškama</h3>
 </body>
 </html>
