Uneta je modularnost u kodu

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     <h3>Transformisanje i filterovanje tokova</h3>
 
+    <a href="primeri/009.html">Primer 9</a>
+
     <h3>Kombinovanje tokova</h3>
 
     <h3>Dodaci i rukovanje greškama</h3>
